--- a/.gitignore
+++ b/.gitignore
@@ -1,129 +1,85 @@
-# Byte-compiled / optimized / DLL files
-__pycache__/
-*.py[cod]
-*$py.class
+<!DOCTYPE html>
+<html lang="en">
+    <title> Mountains</title>
+<head>
+    
+       <div class="GlobalHeader__Navbar container">
+        <a class="GlobalHeader__Branding me-auto link-white" href="/" role="banner" id="anch_5">
+        <img src="mountains9.jpg" alt="" width="150" height="150" class="GlobalHeader__Branding__Arrowhead img-fluid">
+        <span class="GlobalHeader__Branding__Text">
+        National Park Service
+        </span>
+        </a>
+        <a href="#GlobalFooterSearch" class="GlobalHeader__FooterSearchLink js-scrollTo link-white" id="anch_6">
+        <i class="fa fa-search"></i>
+        <span class="visually-hidden">Search</span>
+        </a>
+        <form id="GlobalHeaderSearch" class="GlobalHeader__Search" action="/search/" method="GET" role="search">
+        <button type="button" data-bs-toggle="collapse" data-bs-target="#GlobalHeaderSearchCollapse" aria-expanded="false" aria-controls="GlobalHeaderSearchCollapse" fdprocessedid="ig7ps9">
+        <i class="fa fa-search"></i>
+        Search
+        </button>
+        <div id="GlobalHeaderSearchCollapse" class="collapse collapse-horizontal" role="presentation">
+        <div>
+        <input class="form-control me-2" type="text" autocomplete="off" name="query" placeholder="Keyword Search" aria-label="Search text">
+        <div class="GlobalSearch-suggestions"></div>
+        <button class="btn btn-secondary me-2" data-scope="site" type="submit">
+        This Site
+        </button>
+        <button class="btn btn-secondary" data-scope="all" type="submit">
+        All NPS
+        </button>
+        </div>
+        </div>
+        <input type="hidden" name="sitelimit" value="www.nps.gov/grsm">
+        <input type="hidden" name="affiliate" value="nps">
+        </form>
+        </div>
+       
+       
+    
+    <title>Document</title>
+</head>
 
-# C extensions
-*.so
+<style>
+    body {
+        background-color: lightgoldenrodyellow;
+        background-image: url("mountains1.jpg")
+    }
+    #mountain {
+            display: flex;
+        }
+        #mountain div {
+            border: 1px solid black;   
+        }
+        .mountains1 {
+            flex-basis: 20%;
+            flex-grow: 0;
+            flex-shrink: 1;
+        }
+        .mountains2 {
+            flex-basis: 80%;
+            flex-grow: 1;
+            flex-shrink: 0;
+        }
+        p strong i { 
+            color: black;
+            font-size: 50px;
+            }
+    
+        
 
-# Distribution / packaging
-.Python
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-pip-wheel-metadata/
-share/python-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
-MANIFEST
+</style>
+    
 
-# PyInstaller
-#  Usually these files are written by a python script from a template
-#  before PyInstaller builds the exe, so as to inject date/other infos into it.
-*.manifest
-*.spec
 
-# Installer logs
-pip-log.txt
-pip-delete-this-directory.txt
+<body>
+    
+</div>
+        <p>
+            <strong> <i>Ridge upon ridge of forest straddles the border between North Carolina and Tennessee in Great Smoky Mountains National Park. World renowned for its diversity of plant and animal life, the beauty of its ancient mountains, and the quality of its remnants of Southern Appalachian mountain culture, this is America's most visited national park. Plan your visit today! Learn more about the park's fee program changes for 2023, including a new initiative: the Smokies Parking Tag program.</i> </strong>
+        </p>
 
-# Unit test / coverage reports
-htmlcov/
-.tox/
-.nox/
-.coverage
-.coverage.*
-.cache
-nosetests.xml
-coverage.xml
-*.cover
-*.py,cover
-.hypothesis/
-.pytest_cache/
-
-# Translations
-*.mo
-*.pot
-
-# Django stuff:
-*.log
-local_settings.py
-db.sqlite3
-db.sqlite3-journal
-
-# Flask stuff:
-instance/
-.webassets-cache
-
-# Scrapy stuff:
-.scrapy
-
-# Sphinx documentation
-docs/_build/
-
-# PyBuilder
-target/
-
-# Jupyter Notebook
-.ipynb_checkpoints
-
-# IPython
-profile_default/
-ipython_config.py
-
-# pyenv
-.python-version
-
-# pipenv
-#   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
-#   However, in case of collaboration, if having platform-specific dependencies or dependencies
-#   having no cross-platform support, pipenv may install dependencies that don't work, or not
-#   install all needed dependencies.
-#Pipfile.lock
-
-# PEP 582; used by e.g. github.com/David-OConnor/pyflow
-__pypackages__/
-
-# Celery stuff
-celerybeat-schedule
-celerybeat.pid
-
-# SageMath parsed files
-*.sage.py
-
-# Environments
-.env
-.venv
-env/
-venv/
-ENV/
-env.bak/
-venv.bak/
-
-# Spyder project settings
-.spyderproject
-.spyproject
-
-# Rope project settings
-.ropeproject
-
-# mkdocs documentation
-/site
-
-# mypy
-.mypy_cache/
-.dmypy.json
-dmypy.json
-
-# Pyre type checker
-.pyre/
+    
+</body>
+</html>
